# OpenMeatBoy

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
OpenMeatBoy/: CMakeLists.txt  OpenMeatBoy.cpp  OpenMeatBoy.h
docs/: charprops.txt
include/core/: main.h
src/: CMakeLists.txt  main.cpp
src/core/: main.cpp
